# learn-3d-graphics

./: .gitignore  CMakeLists.txt  Makefile  cube-Body.stl  main.cpp  obj.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: obj.hpp  utility.hpp
src/: main.cpp  obj.cpp  utility.cpp
